--- a/views/pagini/produse.ejs
+++ b/views/pagini/produse.ejs
@@ -6,6 +6,7 @@
         <title>Produse</title>
 
         <link rel="stylesheet" href="resurse/css/pagina-produse.css" type="text/css">
+        <link rel="stylesheet" href="resurse/css/filtre.css" type="text/css">
         <%- include("../fragmente/head") %>     
         <script type="text/javascript" src="resurse/js/produse.js"></script>
     </head>
@@ -13,77 +14,87 @@
     <%- include("../fragmente/header") %>
 
     <main>
-        <label> Nume: <input type="text" id="input-nume"></label>
-        <div> Livrare inclusa:
-            <label>Da
-                <input id="input-rad1" name="gr-rad" value="Da" type="radio"/>
-            </label>
-            <label>Nu
-                <input id="input-rad2" name="gr-rad" value="Nu" type="radio"/>
-            </label>
-            <label>Toate
-                <input id="input-rad3" checked name="gr-rad" value="Toate" type="radio"/>
-            </label>
-        </div>
-
-
-        <% let currentYear = (new Date()).getFullYear() %> 
-        <label> An fabricatie minim: <span>(<%- locals.an_minim %> )</span> <input type="range" id="input-an-fabricatie" value="<%- locals.an_minim %>" min="<%- locals.an_minim %>" max="<%- currentYear %>"> <span id="infoRangeAn">(<%- currentYear %>)</span></label> </br>
         
-        <label> Pret minim: <span>(<%- locals.pret_minim %>)</span> <input type="range" id="input-pret" value="<%- locals.pret_minim %>" min="<%- locals.pret_minim %>" max="<%- locals.pret_maxim %>"> <span id="infoRangePret">(<%- locals.pret_minim %>)</span></label> </br>
-
-        <label>Categorie produse:
-            <select id="input-categ-produse" multiple size="<%- Math.min(locals.optiuni.length + 1, 10) %> ">
-                <option id="select-multiplu-toate" selected value="toate">toate</option>
-                <% for (let opt of locals.optiuni) { %>
-                    <option value="<%- opt.unnest %>"><%- opt.unnest %> </option>
-                <% } %>
-            </select>
-        </label> </br>
-
-        <label>Autor anunt:
-            <input list="id-datalist" id="input-autor-anunt">
-            <datalist id="id-datalist">
-                <% for (let userObj of locals.users) { %>
-                    <option value="<%- userObj.autor_anunt %>"></option>
-                <%}  %> 
-            </datalist>
-        </label> </br>
-
-        <div>
-            <p>Producatori:</p>
-            <label>Toti producatorii
-                <input id="check-toate" checked name="gr-check" value="Toti" type="checkbox"/>
-            </label> </br>
-            <% for(let producatorObj of locals.producatori){%>
-                <label><%- producatorObj.producator %>
-                    <input id="input-check<%- locals.producatori.indexOf(producatorObj.producator) %>" checked name="gr-check" value="<%- producatorObj.producator %>" type="checkbox"/>
+        <section id = "filtre">
+            <div id="ascundere-filtre">
+                <label>Filtreaza <span class="fas fa-arrow-alt-from-bottom" id="arrow-up"></span><span class="fas fa-arrow-alt-from-top" id="arrow-down"></span>
+                    <input id="check-filtre" value="false" type="checkbox"/>
                 </label> </br>
-            <%} %> 
-        </div> 
+            </div>
 
-        <label>Specificatii: 
-            <select id="input-specificatii">
-                <option id="select-toate" value="toate">Toate</option> 
-                <% for(let opt of locals.specificatii) {%>
-                    <option value="<%- opt %>"><%- opt %></option>
-                <% } %> 
-            </select>
-        </label> </br>
-
-        <label>Cuvinte cheie:
-            <textarea id="input-keywords" cols="50" rows="5" placeholder="Introduceti cuvinte cheie"></textarea>
-        </label>
-
-        <p>
-            <button id="filtrare">Filtreaza</button> <button id="resetare">Reseteaza</button><br/>
-            <button id="sortCrescNume">Sorteaza crescator dupa nume si pret</button>
-            <button id="sortDescrescNume">Sorteaza descrescator dupa nume si pret</button>
-        </p>
-
-        <p id="p-suma">Apăsați Alt+"c" pentru suma preturilor produselor afișate. </p>
-
-
+            <div id="container-filtre">
+                <label> Nume: <input type="text" id="input-nume"></label>
+                <div> Livrare inclusa:
+                    <label>Da
+                        <input id="input-rad1" name="gr-rad" value="Da" type="radio"/>
+                    </label>
+                    <label>Nu
+                        <input id="input-rad2" name="gr-rad" value="Nu" type="radio"/>
+                    </label>
+                    <label>Toate
+                        <input id="input-rad3" checked name="gr-rad" value="Toate" type="radio"/>
+                    </label>
+                </div>
+        
+        
+                <% let currentYear = (new Date()).getFullYear() %> 
+                <label> An fabricatie minim: <span id="an-minim">(<%- locals.an_minim %>)</span> <input type="range" id="input-an-fabricatie" value="<%- locals.an_minim %>" min="<%- locals.an_minim %>" max="<%- currentYear %>"> <span id="infoRangeAn">(<%- currentYear %>)</span></label> </br>
+                
+                <label> Pret minim: <span id="pret-minim">(<%- locals.pret_minim %>)</span> <input type="range" id="input-pret" value="<%- locals.pret_minim %>" min="<%- locals.pret_minim %>" max="<%- locals.pret_maxim %>"> <span id="infoRangePret">(<%- locals.pret_minim %>)</span></label> </br>
+        
+                <label>Categorie produse:
+                    <select id="input-categ-produse" multiple size="<%- Math.min(locals.optiuni.length + 1, 10) %> ">
+                        <option id="select-multiplu-toate" selected value="toate">toate</option>
+                        <% for (let opt of locals.optiuni) { %>
+                            <option value="<%- opt.unnest %>"><%- opt.unnest %> </option>
+                        <% } %>
+                    </select>
+                </label> </br>
+        
+                <label>Autor anunt:
+                    <input list="id-datalist" id="input-autor-anunt">
+                    <datalist id="id-datalist">
+                        <% for (let userObj of locals.users) { %>
+                            <option value="<%- userObj.autor_anunt %>"></option>
+                        <%}  %> 
+                    </datalist>
+                </label> </br>
+        
+                <div>
+                    <p>Producatori:</p>
+                    <label>Toti producatorii
+                        <input id="check-toate" checked name="gr-check" value="Toti" type="checkbox"/>
+                    </label> </br>
+                    <% for(let producatorObj of locals.producatori){%>
+                        <label><%- producatorObj.producator %>
+                            <input id="input-check<%- locals.producatori.indexOf(producatorObj.producator) %>" checked name="gr-check" value="<%- producatorObj.producator %>" type="checkbox"/>
+                        </label> </br>
+                    <%} %> 
+                </div> 
+        
+                <label>Specificatii: 
+                    <select id="input-specificatii">
+                        <option id="select-toate" value="toate">Toate</option> 
+                        <% for(let opt of locals.specificatii) {%>
+                            <option value="<%- opt %>"><%- opt %></option>
+                        <% } %> 
+                    </select>
+                </label> </br>
+        
+                <label>Cuvinte cheie:
+                    <textarea id="input-keywords" cols="50" rows="5" placeholder="Introduceti cuvinte cheie"></textarea>
+                </label>
+        
+                <p>
+                    <button id="filtrare">Filtreaza</button> 
+                    <button id="resetare">Reseteaza</button><br/>
+                    <button id="sortCresc">Sorteaza crescator</button>
+                    <button id="sortDescresc">Sorteaza descrescator</button>
+                </p>
+        
+                <p id="p-suma">Apăsați Alt+"c" pentru suma preturilor produselor afișate. </p>
+            </div>
+        </section>
 
         <div id="grid-produse">
             <% for( let prod of locals.produse) { %>
