--- a/views/fragmente/header.ejs
+++ b/views/fragmente/header.ejs
@@ -1,3 +1,8 @@
+<script>
+    var tema = localStorage.getItem("tema");
+	if (tema) document.body.classList.add("dark");
+	else document.body.classList.remove("dark");
+</script>
 <header>
     <h1>BikeAddiction</h1>
 </header>
@@ -21,24 +26,11 @@
                 <li><a href="/index#informatii">Informatii</a></li>
             </ul>
         </li>
-        <li><a href="signin.html">Sign In</a><div></div></li>
+        <li><a href="/inregistrare">Inregistrare</a><div></div></li>
         <!-- <li><a href="signup.html">Sign Up</a></li> -->
         <li><a href="/contact">Contact</a><div></div></li>
         <li><a href="/produse">Produse</a><div></div>
             <ul class="submeniu">
-                <!-- <li><a href="/produse?tip=biciclete">Biciclete</a>
-                    <ul class="submeniu">
-                        <li><a href="sosea.html">Sosea</a></li>
-                        <li><a href="mtb.html"><abbr title="Mountain Bike">MTB</abbr></a></li>
-                        <li><a href="trekking.html">Trekking</a></li>
-                        <li><a href="electrice.html">Electrice</a></li>
-                        <li><a href="bmx.html"><abbr title="bicycle, motocross, with X standing for cross">BMX</abbr></a></li>
-                        <li><a href="copii.html">Copii</a></li>
-                    </ul>
-                </li>
-                <li><a href="/produse?tip=piese"><b>Piese</b></a></li>
-                <li><a href="/produse?tip=accesorii"><b>Accesorii</b></a></li>
-                <li><a href="/produse?tip=echipamente"><b>Echipamente</b></a></li> -->
                 <% for(let categProdus of locals.categProduse){ %>
                     <li><a href="/produse?tip=<%- categProdus %>"><%- categProdus[0].toUpperCase() + categProdus.slice(1) %> </a>
                     <% if(categProdus == "biciclete"){ %>   
