--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -91,11 +91,7 @@
                         bicicleta sa stie la ce ne referim cand spunem acest lucru.
                     </p>
 
-                    <div id = "tabel-produse">
-                        <% for(let prod of locals.produse){ %>
-                            <p><%- prod.nume %> <%- prod.pret %></p>
-                        <% } %>  
-                    </div>
+                    <p><button id="btn-tema">Schimba tema</button></p>
 
                 </section>
     
