--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -12,15 +12,15 @@
 <meta name="msapplication-config" content="/resurse/ico/browserconfig.xml">
 <meta name="theme-color" content="#ffffff"> 
 
+<!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
 <link rel="stylesheet" href="/resurse/css/style.css" type="text/css"/>
 <link rel="stylesheet" href="/resurse/css/table.css" type="text/css"/>
 <link rel="stylesheet" href="/resurse/css/meniu-mare.css" type="text/css"/>
 <link rel="stylesheet" href="/resurse/css/meniu-mic.css" type="text/css" media="screen and (max-width: 750px)"/>
 <link rel="stylesheet" href="/resurse/css/printare.css" type="text/css" media="print"/>
-<!-- <link rel="stylesheet" href="resurse/sass/meniu-mare.css" type="text/css"/>
-<link rel="stylesheet" href="resurse/sass/meniu-mic.css" type="text/css" media="screen and (max-width: 750px)"/> -->
 <link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.13.0/css/all.css" />
 
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
+<script src="/resurse/js/tema.js"></script>
