--- a/views/pagini/logout.ejs
+++ b/views/pagini/logout.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html  lang="ro">
     <head>
-        <meta name="description" content="Cofetaria Dulcelind - Logout">
+        <meta name="description" content="BikeAddiction - Logout">
         <meta name="keywords" content="cofetarie, Dulcelind, logout">
         <link rel="stylesheet" href="/resurse/css/produse.css" type="text/css" />
         <title>Cofetăria Dulcelind - înregistrare </title>
@@ -13,7 +13,7 @@
 
     <main>
     Ai fost delogat!
-</main>
+    </main>
 
 <footer>
     <%- include('../fragmente/footer') %>
