--- a/views/pagini/index.ejs
+++ b/views/pagini/index.ejs
@@ -92,6 +92,21 @@
                     </p>
 
                     <p><button id="btn-tema">Schimba tema</button></p>
+                    <% if(!locals.utilizator){ %>
+                        <form id="form_inreg"  method="post" class="date"  action="/login"  enctype="multipart/form-data">
+                            <p>
+                                <label>
+                                    Username: <input type="text" name="username" id="inp-username" value="prof<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
+                                </label>
+                            </p>
+                            <p>
+                                <label>
+                                    Parola: <input id="parl" type="password" required  name="parola" value="">
+                                </label>
+                            </p>
+                            <p><input type="submit" value="Sign In"></p>
+                        </form>
+                    <% } %>
 
                 </section>
     
