--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -23,4 +23,4 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
-<script src="/resurse/js/tema.js"></script>
+<!-- <script src="/resurse/js/tema.js"></script> -->
