inregistrarea pare ca merge

--- a/views/pagini/confirmare.ejs
+++ b/views/pagini/confirmare.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ro">
 	<head>
-		<title>Eroare</title>
+		<title>Confirmare</title>
 		<%- include("../fragmente/head") %>
 	</head>
 	<body class="container">
@@ -9,9 +9,10 @@
 			<%- include("../fragmente/header") %>
 		</header>
 		<main>
-			
-			<h1>Confirmare mail</h1>
-			<p>Totul a functionat bine!</p>
+			<section>
+				<h1>Confirmare mail</h1>
+				<p>Totul a functionat bine!</p>
+			</section>
 		</main>
 		
 		<%- include("../fragmente/footer") %>
