--- a/views/pagini/login.ejs
+++ b/views/pagini/login.ejs
@@ -16,7 +16,7 @@
                 <form id="form_inreg"  method="post" class="date"  action="/login"  enctype="multipart/form-data">
                     <p>
                         <label>
-                            Username: <input type="text" name="username" id="inp-username" value="prof<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
+                            Username: <input type="text" name="username" id="inp-username" value="biker<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
                         </label>
                     </p>
                     <p>
