--- a/views/fragmente/formular.ejs
+++ b/views/fragmente/formular.ejs
@@ -1,7 +1,7 @@
 <form id="form_inreg"  method="post" class="date"  action="<%= locals.action %>"  enctype="multipart/form-data">
     <p>
         <label>
-            Username: <input type="text" name="username" id="inp-username" value="prof<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
+            Username: <input type="text" name="username" id="inp-username" value="biker<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
         </label>
     </p>
     <p>
@@ -26,7 +26,7 @@
     </p>
     <p>
         <label>
-            Email: <input type="text" name="email" id="inp-email" required value="profprofprof007@gmail.com"  size="50">
+            Email: <input type="text" name="email" id="inp-email" required value="bikeaddiction2@gmail.com"  size="50">
         </label>
     </p>
     <p>
