--- a/views/fragmente/head.ejs
+++ b/views/fragmente/head.ejs
@@ -23,4 +23,11 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Hind+Siliguri:wght@500&display=swap" rel="stylesheet">
-<!-- <script src="/resurse/js/tema.js"></script> -->
+<% if(locals?.utilizator?.problema_vedere) {%> 
+    <script>
+        window.addEventListener("load", function(){
+            document.getElementsByTagName("body")[0].classList.add("problema-vedere");
+            document.getElementsByClassName("ascunde")[0].style.display = "none";
+        })
+    </script>
+<% } %> 
