--- a/views/pagini/confirmare.ejs
+++ b/views/pagini/confirmare.ejs
@@ -10,8 +10,8 @@
 		</header>
 		<main>
 			<section>
-				<h1>Confirmare mail</h1>
-				<p>Totul a functionat bine!</p>
+				<h2 style="text-align: center; margin-bottom: 30px;">Confirmare mail</h2>
+				<p class="mesaj-succes">Totul a functionat bine!</p>
 			</section>
 		</main>
 		
