--- a/views/pagini/login.ejs
+++ b/views/pagini/login.ejs
@@ -5,28 +5,28 @@
         <meta name="keywords" content="BikeAddicton, inregistrare, utilizatori">
         <title>BikeAddiction - înregistrare </title>
         <%- include("../fragmente/head") %>     
+        <link rel="stylesheet" href="/resurse/css/pagina-login.css" type="text/css"/>
     </head>
     <body>
     <%- include("../fragmente/header") %>
 
     <main>
-        <section>
-            <h2>Sign In</h2>
-            <% if(!locals.utilizator){ %>
-                <form id="form_inreg"  method="post" class="date"  action="/login"  enctype="multipart/form-data">
-                    <p>
-                        <label>
-                            Username: <input type="text" name="username" id="inp-username" value="biker<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
-                        </label>
-                    </p>
-                    <p>
-                        <label>
-                            Parola: <input id="parl" type="password" required  name="parola" value="">
-                        </label>
-                    </p>
-                    <p><input type="submit" value="Sign In"></p>
-                </form>
-            <% } %>
+        <section class="form">
+            <form class="form-inreg"  method="post" class="date"  action="/login"  enctype="multipart/form-data">
+                <div>
+                    <h2 id="titlu">Sign In</h2>
+                    <label for="inp-username" id="lbl-username">Username: </label>
+                    <input type="text" name="username" id="inp-username" value="biker<%= Math.floor(Math.random()*100000) %>" required pattern="[A-Za-z0-9]+">
+           
+                    <label for="inp-parl" id="lbl-parl">Parola: </label>
+                    <input id="inp-parl" type="password" required  name="parola" value="">
+                    
+                    <p id="butoane"><input id="buton" type="submit" value="Sign In"></p>
+                </div>
+            </form>
+            <% if(locals.mesajLogin) {%> 
+                <p class="mesaj-eroare"><%- locals.mesajLogin %></p> 
+            <% }%>
         </section>
     </main>
 
